save state before unleashing cody

--- a/bin/fnode_loading_analysis.ipynb
+++ b/bin/fnode_loading_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 36,
    "metadata": {
     "scrolled": false
    },
@@ -26,34 +26,77 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "data at: 2018_07_10/2018_07_10_13_57_57_loading-iy-long-cycle/results.hdf5\n",
+      "data at: 2018_11_19/2018_11_19_15_59_57_iz-0.145+-0.1dumpfort300mscyclerb-5/results.hdf5\n",
       "name 'fort_exp' is not defined\n",
       "name 'rb_uwave_freq' is not defined\n",
-      "ivars: [u'Iy', u'iterator']\n",
-      "ivar: 0.0000\tcloading: 0.099\trloading: 0.564\t\tcretention: 0.700 +- 0.037\trretention: 0.877 +- 0.037\n",
-      "ivar: 0.1000\tcloading: 0.545\trloading: 0.158\t\tcretention: 0.855 +- 0.102\trretention: 0.625 +- 0.102\n",
-      "ivar: 0.2000\tcloading: 0.475\trloading: 0.119\t\tcretention: 0.792 +- 0.120\trretention: 0.583 +- 0.120\n",
-      "ivar: 0.0000\tcloading: 0.515\trloading: 0.059\t\tcretention: 0.750 +- 0.128\trretention: 0.833 +- 0.128\n",
-      "ivar: 0.0000\tcloading: 0.426\trloading: 0.050\t\tcretention: 0.791 +- 0.184\trretention: 0.600 +- 0.184\n"
+      "ivars: [u'Iz']\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "ivar: -0.2450\tcloading: 0.167\trloading: 0.036\t\tcretention: 0.000 +- 0.064\trretention: 0.000 +- 0.064\n",
+      "ivar: -0.2250\tcloading: 0.176\trloading: 0.044\t\tcretention: 0.000 +- 0.053\trretention: 0.000 +- 0.053\n",
+      "ivar: -0.2050\tcloading: 0.187\trloading: 0.080\t\tcretention: 0.000 +- 0.029\trretention: 0.000 +- 0.029\n",
+      "ivar: -0.1850\tcloading: 0.251\trloading: 0.112\t\tcretention: 0.000 +- 0.021\trretention: 0.000 +- 0.021\n",
+      "ivar: -0.1650\tcloading: 0.144\trloading: 0.100\t\tcretention: 0.000 +- 0.024\trretention: 0.000 +- 0.024\n",
+      "ivar: -0.1450\tcloading: 0.191\trloading: 0.124\t\tcretention: 0.000 +- 0.019\trretention: 0.000 +- 0.019\n",
+      "ivar: -0.1250\tcloading: 0.124\trloading: 0.135\t\tcretention: 0.000 +- 0.017\trretention: 0.000 +- 0.017\n",
+      "ivar: -0.1050\tcloading: 0.171\trloading: 0.116\t\tcretention: 0.000 +- 0.020\trretention: 0.000 +- 0.020\n",
+      "ivar: -0.0850\tcloading: 0.175\trloading: 0.124\t\tcretention: 0.000 +- 0.019\trretention: 0.000 +- 0.019\n",
+      "ivar: -0.0650\tcloading: 0.151\trloading: 0.096\t\tcretention: 0.000 +- 0.025\trretention: 0.000 +- 0.025\n",
+      "ivar: -0.0450\tcloading: 0.135\trloading: 0.080\t\tcretention: 0.000 +- 0.029\trretention: 0.000 +- 0.029\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n"
      ]
     },
     {
-     "ename": "ValueError",
-     "evalue": "could not broadcast input array from shape (2,5) into shape (1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-18-9769950564a4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     24\u001b[0m         \u001b[0mretention\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'retention'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mentries\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretention\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'error'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mentries\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m     ))\n\u001b[0;32m---> 26\u001b[0;31m \u001b[0mq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave_experiment_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     27\u001b[0m \u001b[0mxlab\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexperiments\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'variable_desc'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexperiments\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'variable_list'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'description'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[0mfig\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0max\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msubplots\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/ebert/jupyter-notebooks/FNode/analyses/qdp/QDP/qdp.pyc\u001b[0m in \u001b[0;36msave_experiment_data\u001b[0;34m(self, filename_prefix, path)\u001b[0m\n\u001b[1;32m    812\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0msave_experiment_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfilename_prefix\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'data'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpath\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    813\u001b[0m         \u001b[0;34m\"\"\"Saves data to files with the specified prefix.\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 814\u001b[0;31m         \u001b[0;32mif\u001b[0m \u001b[0mpath\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    815\u001b[0m             \u001b[0mpath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexperiments\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'source_path'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    816\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave_json_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename_prefix\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfilename_prefix\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpath\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/ebert/jupyter-notebooks/FNode/analyses/qdp/QDP/qdp.pyc\u001b[0m in \u001b[0;36msave_retention_data\u001b[0;34m(self, filename_prefix, path, shot)\u001b[0m\n\u001b[1;32m    831\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mpath\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    832\u001b[0m             \u001b[0mpath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexperiments\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'source_path'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 833\u001b[0;31m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    834\u001b[0m             np.save(\n\u001b[1;32m    835\u001b[0m                 \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfilename_prefix\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'.npy'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/ebert/jupyter-notebooks/FNode/analyses/qdp/QDP/qdp.pyc\u001b[0m in \u001b[0;36mget_retention\u001b[0;34m(self, shot, fmt)\u001b[0m\n\u001b[1;32m    388\u001b[0m                         \u001b[0;31m# print retention\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    389\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0mfmt\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'numpy'\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mfmt\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'np'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 390\u001b[0;31m                     \u001b[0;32mreturn\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mivar\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretention\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mloading\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    391\u001b[0m                     \u001b[0;31m# print retention\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    392\u001b[0m                 \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: could not broadcast input array from shape (2,5) into shape (1)"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1b74d9f5a15049dab4481e3432cf0f58",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/html": [
+       "<p>Failed to display Jupyter Widget of type <code>FigureCanvasNbAgg</code>.</p>\n",
+       "<p>\n",
+       "  If you're reading this message in Jupyter Notebook or JupyterLab, it may mean\n",
+       "  that the widgets JavaScript is still loading. If this message persists, it\n",
+       "  likely means that the widgets JavaScript library is either not installed or\n",
+       "  not enabled. See the <a href=\"https://ipywidgets.readthedocs.io/en/stable/user_install.html\">Jupyter\n",
+       "  Widgets Documentation</a> for setup instructions.\n",
+       "</p>\n",
+       "<p>\n",
+       "  If you're reading this message in another notebook frontend (for example, a static\n",
+       "  rendering on GitHub or <a href=\"https://nbviewer.jupyter.org/\">NBViewer</a>),\n",
+       "  it may mean that your frontend doesn't currently support widgets.\n",
+       "</p>\n"
+      ],
+      "text/plain": [
+       "FigureCanvasNbAgg()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "exp_name = '2018_07_10_13_57_57_loading-iy-long-cycle'\n",
+    "exp_name = ''\n",
     "if exp_name:\n",
     "    exp_date = '_'.join(exp_name.split('_')[:3])\n",
     "    experiment_file = os.path.join(exp_date, exp_name, 'results.hdf5')\n",
@@ -62,10 +105,11 @@
     "q = qdp.QDP(base_data_path=dp)\n",
     "q.load_data_file(experiment_file)\n",
     "print \"ivars: {}\".format(q.experiments[0]['variable_list'])\n",
-    "cs_cuts = [[30],[3]]\n",
-    "rb_cuts = [[30],[3]]\n",
+    "cs_cuts = [[46],[175]]\n",
+    "rb_cuts = [[42],[175]]\n",
     "q.set_thresholds(cs_cuts, roi=0)\n",
     "q.set_thresholds(rb_cuts, roi=1)\n",
+    "# q.generate_thresholds(loss=False)\n",
     "retention = q.apply_thresholds(exclude_rois=[2])\n",
     "cuts = q.get_thresholds()\n",
     "roi_map = ['cs', 'rb']\n",
