--- a/bin/fnode_multi-retention_analysis.ipynb
+++ b/bin/fnode_multi-retention_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -43,42 +43,160 @@
       "name 'fort_exp' is not defined\n",
       "name 'rb_uwave_freq' is not defined\n",
       "ivars: [u'gap_time']\n",
-      "ivar:\t0.000\tloading:0.286\tretention:0.963 +- 0.024\n",
-      "ivar:\t0.000\tloading:0.348\tretention:0.910 +- 0.024\n",
-      "ivar:\t0.000\tloading:13.955\tretention:2.497 +- 0.024\n",
-      "ivar:\t0.000\tloading:0.302\tretention:0.677 +- 0.041\n",
-      "ivar:\t0.000\tloading:0.314\tretention:0.630 +- 0.041\n",
-      "ivar:\t0.000\tloading:0.000\tretention:inf +- 0.041\n",
-      "ivar:\t0.000\tloading:0.280\tretention:0.613 +- 0.042\n",
-      "ivar:\t0.000\tloading:0.264\tretention:0.520 +- 0.042\n",
-      "ivar:\t0.000\tloading:0.000\tretention:nan +- 0.042\n",
-      "ivar:\t0.000\tloading:0.354\tretention:0.453 +- 0.042\n",
-      "ivar:\t0.000\tloading:0.258\tretention:0.510 +- 0.042\n",
-      "ivar:\t0.000\tloading:0.000\tretention:inf +- 0.042\n",
-      "ivar:\tnan\tloading:0.369\tretention:0.469 +- 0.041\n",
-      "ivar:\tnan\tloading:0.196\tretention:0.441 +- 0.041\n",
-      "ivar:\t0.000\tloading:0.000\tretention:inf +- 0.041\n",
-      "ivar:\t0.000\tloading:0.295\tretention:0.366 +- 0.041\n",
-      "ivar:\t0.000\tloading:0.199\tretention:0.417 +- 0.041\n",
-      "ivar:\t0.000\tloading:0.000\tretention:inf +- 0.041\n",
-      "ivar:\t12000.000\tloading:0.386\tretention:0.231 +- 0.039\n",
-      "ivar:\t12000.000\tloading:0.265\tretention:0.307 +- 0.039\n",
-      "ivar:\t12000.000\tloading:0.000\tretention:inf +- 0.039\n",
-      "ivar:\t14000.000\tloading:0.228\tretention:0.203 +- 0.035\n",
-      "ivar:\t14000.000\tloading:0.283\tretention:0.214 +- 0.035\n",
-      "ivar:\t14000.000\tloading:0.000\tretention:inf +- 0.035\n",
+      "[    79.     91.  10000.]\n",
+      "[   82.    100.   4005.1]\n",
+      "loading\n",
+      "loading\n",
+      "loading\n",
+      "[ 65.  63.   5.]\n",
+      "[  96.  100.    0.]\n",
+      "loading\n",
+      "loading\n",
+      "no loading observed\n",
+      "[    65.     52.  10000.]\n",
+      "[ 106.  100.    0.]\n",
+      "loading\n",
+      "loading\n",
+      "no loading observed\n",
+      "[ 62.  51.   5.]\n",
+      "[ 137.  100.    0.]\n",
+      "loading\n",
+      "loading\n",
+      "no loading observed\n",
+      "[    90.     45.  10000.]\n",
+      "[ 192.  102.    0.]\n",
+      "loading\n",
+      "loading\n",
+      "no loading observed\n",
+      "[ 56.  43.   5.]\n",
+      "[ 153.  103.    0.]\n",
+      "loading\n",
+      "loading\n",
+      "no loading observed\n",
+      "[    34.     31.  10000.]\n",
+      "[ 147.  101.    0.]\n",
+      "loading\n",
+      "loading\n",
+      "no loading observed\n",
+      "[ 16.  21.   5.]\n",
+      "[ 79.  98.   0.]\n",
+      "loading\n",
+      "loading\n",
+      "no loading observed\n",
+      "[     0.     29.  10000.]\n",
+      "[  2.  99.   0.]\n",
+      "loading\n",
+      "loading\n",
+      "no loading observed\n",
+      "[ 16.  23.   5.]\n",
+      "[  85.  101.    0.]\n",
+      "loading\n",
+      "loading\n",
+      "no loading observed\n",
+      "[    14.     17.  10000.]\n",
+      "[ 92.  98.   0.]\n",
+      "loading\n",
+      "loading\n",
+      "no loading observed\n",
+      "[67 81  0]\n",
+      "[70 88  1]\n",
+      "loading\n",
+      "loading\n",
+      "loading\n",
+      "[57 58  0]\n",
+      "[72 76  1]\n",
+      "loading\n",
+      "loading\n",
+      "loading\n",
+      "[56 44  0]\n",
+      "[79 73  1]\n",
+      "loading\n",
+      "loading\n",
+      "loading\n",
+      "[61 49  0]\n",
+      "[114  77   1]\n",
+      "loading\n",
+      "loading\n",
+      "loading\n",
+      "[79 39  0]\n",
+      "[162  72   1]\n",
+      "loading\n",
+      "loading\n",
+      "loading\n",
+      "[50 37  0]\n",
+      "[124  74   1]\n",
+      "loading\n",
+      "loading\n",
+      "loading\n",
+      "[32 27  0]\n",
+      "[116  70   1]\n",
+      "loading\n",
+      "loading\n",
+      "loading\n",
+      "[15 19  0]\n",
+      "[60 79  1]\n",
+      "loading\n",
+      "loading\n",
+      "loading\n",
+      "[ 0 29  0]\n",
+      "[ 2 99  1]\n",
+      "loading\n",
+      "loading\n",
+      "loading\n",
+      "[15 19  0]\n",
+      "[61 77  1]\n",
+      "loading\n",
+      "loading\n",
+      "loading\n",
+      "[10 13  0]\n",
+      "[58 64  1]\n",
+      "loading\n",
+      "loading\n",
+      "loading\n",
+      "ivar:\t0.000\tloading:0.286\tretention:0.957 +- 0.024\n",
+      "ivar:\t0.000\tloading:0.348\tretention:0.920 +- 0.024\n",
+      "ivar:\t0.000\tloading:13.955\tretention:0.000 +- 0.024\n",
+      "ivar:\t0.000\tloading:0.302\tretention:0.792 +- 0.041\n",
+      "ivar:\t0.000\tloading:0.314\tretention:0.763 +- 0.041\n",
+      "ivar:\t0.000\tloading:0.000\tretention:0.000 +- 0.041\n",
+      "ivar:\t0.000\tloading:0.280\tretention:0.709 +- 0.048\n",
+      "ivar:\t0.000\tloading:0.264\tretention:0.603 +- 0.048\n",
+      "ivar:\t0.000\tloading:0.000\tretention:0.000 +- 0.048\n",
+      "ivar:\t0.000\tloading:0.354\tretention:0.535 +- 0.046\n",
+      "ivar:\t0.000\tloading:0.258\tretention:0.636 +- 0.046\n",
+      "ivar:\t0.000\tloading:0.000\tretention:0.000 +- 0.046\n",
+      "ivar:\t0.000\tloading:0.369\tretention:0.488 +- 0.049\n",
+      "ivar:\t0.000\tloading:0.196\tretention:0.542 +- 0.049\n",
+      "ivar:\t0.000\tloading:0.000\tretention:0.000 +- 0.049\n",
+      "ivar:\t0.000\tloading:0.295\tretention:0.403 +- 0.049\n",
+      "ivar:\t0.000\tloading:0.199\tretention:0.500 +- 0.049\n",
+      "ivar:\t0.000\tloading:0.000\tretention:0.000 +- 0.049\n",
+      "ivar:\t12000.000\tloading:0.386\tretention:0.276 +- 0.049\n",
+      "ivar:\t12000.000\tloading:0.265\tretention:0.386 +- 0.049\n",
+      "ivar:\t12000.000\tloading:0.000\tretention:0.000 +- 0.049\n",
+      "ivar:\t14000.000\tloading:0.228\tretention:0.250 +- 0.040\n",
+      "ivar:\t14000.000\tloading:0.283\tretention:0.241 +- 0.040\n",
+      "ivar:\t14000.000\tloading:0.000\tretention:0.000 +- 0.040\n",
       "ivar:\t16000.000\tloading:0.005\tretention:0.000 +- 0.038\n",
       "ivar:\t16000.000\tloading:0.254\tretention:0.293 +- 0.038\n",
-      "ivar:\t16000.000\tloading:0.000\tretention:inf +- 0.038\n",
-      "ivar:\t18000.000\tloading:0.276\tretention:0.188 +- 0.035\n",
-      "ivar:\t18000.000\tloading:0.328\tretention:0.228 +- 0.035\n",
-      "ivar:\t18000.000\tloading:0.000\tretention:inf +- 0.035\n",
-      "ivar:\t20000.000\tloading:0.367\tretention:0.152 +- 0.032\n",
-      "ivar:\t20000.000\tloading:0.390\tretention:0.173 +- 0.032\n",
-      "ivar:\t20000.000\tloading:0.000\tretention:inf +- 0.032\n",
+      "ivar:\t16000.000\tloading:0.000\tretention:0.000 +- 0.038\n",
+      "ivar:\t18000.000\tloading:0.276\tretention:0.246 +- 0.041\n",
+      "ivar:\t18000.000\tloading:0.328\tretention:0.247 +- 0.041\n",
+      "ivar:\t18000.000\tloading:0.000\tretention:0.000 +- 0.041\n",
+      "ivar:\t20000.000\tloading:0.367\tretention:0.172 +- 0.042\n",
+      "ivar:\t20000.000\tloading:0.390\tretention:0.203 +- 0.042\n",
+      "ivar:\t20000.000\tloading:0.000\tretention:0.000 +- 0.042\n",
       "ivar:\t0.000\tloading:0.000\tretention:0.000 +- 0.000\n",
       "ivar:\t0.000\tloading:0.000\tretention:0.000 +- 0.000\n",
       "ivar:\t0.000\tloading:0.000\tretention:0.000 +- 0.000\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ebert/jupyter-notebooks/FNode/analyses/qdp/QDP/qdp.py:133: RuntimeWarning: invalid value encountered in sqrt\n",
+      "  errs[r] = (z/n[r].astype('float'))*np.sqrt(ns[r].astype('float')*(1.0-ns[r].astype('float')/n[r].astype('float')))\n"
      ]
     }
    ],
@@ -87,6 +205,15 @@
     "    '2018_07_11_09_29_44_trap-lifetime',\n",
     "    '2018_07_11_13_45_13_trap-lifetime-2'\n",
     "]\n",
+    "\n",
+    "single_only = True\n",
+    "\n",
+    "rets = 'retention'\n",
+    "errs = 'error'\n",
+    "if single_only:\n",
+    "    rets = 'conditional_retention'\n",
+    "    errs = 'conditional_retention_err'\n",
+    "\n",
     "q = qdp.QDP(base_data_path=dp)\n",
     "for exp_name in exp_names:\n",
     "    exp_date = '_'.join(exp_name.split('_')[:3])\n",
@@ -99,7 +226,7 @@
     "rb_cuts = [[31],[3]]\n",
     "q.set_thresholds(cs_cuts, roi=0)\n",
     "q.set_thresholds(rb_cuts, roi=1)\n",
-    "retention = q.apply_thresholds(exclude_rois=exclude)\n",
+    "retention = q.apply_thresholds(exclude_rois=exclude, ncondition=1)\n",
     "tbl_str = \"ivar:\\t{0}\\tretention:{1} +- {2}\"\n",
     "\n",
     "q.experiments[0]['variable_list']\n",
@@ -109,22 +236,22 @@
     "    xlab = 'iterator'\n",
     "\n",
     "tbl_str = \"ivar:\\t{0:.3f}\\tloading:{1:.3f}\\tretention:{2:.3f} +- {3:.3f}\"\n",
-    "for i in range(len(retention['retention'].flatten())):\n",
+    "for i in range(len(retention[rets].flatten())):\n",
     "    print(tbl_str.format(\n",
     "        retention['ivar'].flatten()[i],\n",
     "        retention['loading'].flatten()[i],\n",
-    "        retention['retention'].flatten()[i],\n",
-    "        retention['error'].flatten()[i]\n",
+    "        retention[rets].flatten()[i],\n",
+    "        retention[errs].flatten()[i]\n",
     "    ))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "q.save_experiment_data(filename_prefix='uwave-ramsey')\n",
+    "q.save_experiment_data(filename_prefix='lifetime')\n",
     "legends = ['{}'.format(x) for x in [1,2]]"
    ]
   },
@@ -205,27 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 0.30693069,  0.21428571,  0.29292929,  0.22772277,  0.17346939])"
-      ]
-     },
-     "execution_count": 90,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "retention['retention'][1,:-1,1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
@@ -233,7 +340,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4524984de7c445d99f6ff7bc00cbc3a1",
+       "model_id": "37aea9ebe14c4194a9ad0d7e049fd44a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -263,14 +370,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.93833854  9.73703786]\n",
-      "[ 0.02831983  0.64378965]\n",
-      "[  0.86641323  11.82423601]\n",
-      "[ 0.03391213  0.98029857]\n"
+      "[  0.95692399  11.29052678]\n",
+      "[ 0.01630036  0.48585541]\n",
+      "[  0.91393715  13.4564238 ]\n",
+      "[ 0.02352775  0.83475513]\n"
      ]
     }
    ],
    "source": [
+    "import scipy.optimize as optimize\n",
+    "\n",
     "fig, ax = plt.subplots()\n",
     "ret = []\n",
     "err = []\n",
@@ -284,8 +393,8 @@
     "    return b + a*np.exp(-x/tau)\n",
     "\n",
     "for r in range(2):\n",
-    "    ret.append(np.concatenate((retention['retention'][0,:,r], retention['retention'][e,:-1,r])))\n",
-    "    err.append(np.concatenate((retention['error'][0,:,r], retention['error'][e,:-1,r])))\n",
+    "    ret.append(np.concatenate((retention[rets][0,:,r], retention[rets][1,:-1,r])))\n",
+    "    err.append(np.concatenate((retention[errs][0,:,r], retention[errs][1,:-1,r])))\n",
     "    if r == 0:\n",
     "        ret[r] = np.delete(ret[r], -3)\n",
     "        err[r] = np.delete(err[r], -3)\n",
@@ -310,6 +419,47 @@
     "fn = os.path.join(dp, os.path.dirname(experiment_file), 'trap-lifetime_20180711.{}')\n",
     "for fmt in fmts:\n",
     "    fig.savefig(fn.format(fmt), dpi=200, format=fmt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.02406789,  0.04060384,  0.04201635,  0.04204159,  0.04134656,\n",
+       "        0.04086486])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "retention['error'][0,:,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.,  0.,  0.,  0.,  0.,  0.])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "retention[errs][1,:,0]"
    ]
   },
   {
@@ -385,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
