--- a/bin/fnode_readout_analysis.ipynb
+++ b/bin/fnode_readout_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
@@ -35,24 +35,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "data at: 2018_07_19/2018_07_19_10_34_02_ro/results.hdf5\n",
+      "data at: 2018_11_02/2018_11_02_07_47_25_temp-1ms-cool/results.hdf5\n",
       "ivars: []\n",
       "--------------------\n",
       "--------------------\n",
       "--------------------\n",
       "--------------------\n",
-      "On entry to DGESDD parameter number 5 had an illegal value\n",
-      "There may be some issue with your guess: `[  6.65468346e-18   0.00000000e+00   0.00000000e+00]`\n",
       "--------------------\n",
-      "On entry to DGESDD parameter number 5 had an illegal value\n",
-      "There may be some issue with your guess: `[  6.65468346e-18   0.00000000e+00   0.00000000e+00]`\n",
+      "Internal work array size computation failed: -5\n",
+      "There may be some issue with your guess: `[2.72169077e-19 0.00000000e+00 0.00000000e+00]`\n",
       "--------------------\n",
-      "ivar:\t0.0\tretention:\t0.910(15)\t0.891(15)\n",
+      "Could not find conditional retention\n",
+      "ivar:\t0.0\tretention:\t0.9525(38)\t0.8874(38)\n",
+      "Could not find conditional retention\n",
       "------------------------------\n",
-      "cs_s0:\tbg: 16.73\tsig: 35.1\tcut: 33 \tload: 0.140460\n",
-      "cs_s1:\tbg: 0.10\tsig: 7.3\tcut: 3  \tload: 0.134077\n",
-      "rb_s0:\tbg: 15.26\tsig: 40.2\tcut: 32 \tload: 0.310238\n",
-      "rb_s1:\tbg: 0.32\tsig: 9.3\tcut: 4  \tload: 0.279734\n"
+      "cs_s0:\tbg: 28.70\tsig: 41.7\tcut: 48 \tload: 0.307831\n",
+      "cs_s1:\tbg: 28.55\tsig: 40.1\tcut: 47 \tload: 0.299407\n",
+      "rb_s0:\tbg: 36.21\tsig: 55.1\tcut: 62 \tload: 0.203323\n",
+      "rb_s1:\tbg: 36.74\tsig: 56.8\tcut: 63 \tload: 0.181860\n"
      ]
     }
    ],
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
@@ -122,7 +122,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "34d3cb31ebc74add814b27fbdcbad50f",
+       "model_id": "559a874baf1842a084e5cdbba35ad004",
        "version_major": 2,
        "version_minor": 0
       },
@@ -152,10 +152,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[  0.14045998  16.73053935  35.14136682]\n",
-      "[  0.31023785  15.2600852   40.17074148]\n",
-      "[ 0.13407674  0.09686767  7.27378144]\n",
-      "[ 0.27973373  0.3225151   9.34352585]\n"
+      "[ 0.30783142 28.69567716 41.69547267]\n",
+      "[ 0.20332343 36.21213341 55.09853419]\n",
+      "[ 0.29940708 28.55014405 40.09162292]\n",
+      "[ 0.18185973 36.73814613 56.82798414]\n"
      ]
     }
    ],
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 10,
    "metadata": {
     "scrolled": false
    },
@@ -206,7 +206,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "80b6ad5d0a9849929570f2292c3b3a58",
+       "model_id": "5dae380944c1446c86562e1f4496df8a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -259,13 +259,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
+       "model_id": "0080f056e11c442a87ddc89dbe67e042",
        "version_major": 2,
        "version_minor": 0
       },
@@ -295,8 +295,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.53867152  0.23566879]\n",
-      " [ 0.1833485   0.04231119]]\n"
+      "[[0.67366527 0.        ]\n",
+      " [0.32633473 0.        ]]\n"
      ]
     }
    ],
