--- a/bin/fnode_retention_analysis-guassian.ipynb
+++ b/bin/fnode_retention_analysis-guassian.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 24,
    "metadata": {
     "scrolled": false
    },
@@ -31,45 +31,71 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "data at: 2018_07_07/2018_07_07_19_58_34_p-heating-radial-freq-scan/results.hdf5\n",
+      "data at: 2018_11_01/2018_11_01_13_25_14_temp-1ms-cool/results.hdf5\n",
       "name 'fort_exp' is not defined\n",
       "name 'rb_uwave_freq' is not defined\n",
-      "ivars: [u'p_heating_freq']\n",
+      "ivars: [u'fort_drop_us']\n",
       "--------------------\n",
       "--------------------\n",
       "--------------------\n",
       "--------------------\n",
-      "On entry to DGESDD parameter number 5 had an illegal value\n",
-      "There may be some issue with your guess: `[  7.38507555e-18   0.00000000e+00   0.00000000e+00]`\n",
+      "Internal work array size computation failed: -5\n",
+      "There may be some issue with your guess: `[1.98845915e-17 0.00000000e+00 0.00000000e+00]`\n",
       "--------------------\n",
-      "On entry to DGESDD parameter number 5 had an illegal value\n",
-      "There may be some issue with your guess: `[  7.38507555e-18   0.00000000e+00   0.00000000e+00]`\n",
+      "Internal work array size computation failed: -5\n",
+      "There may be some issue with your guess: `[1.98845915e-17 0.00000000e+00 0.00000000e+00]`\n",
       "--------------------\n",
-      "ivar: 60.0000\tcloading: 0.289\trloading: 0.108\t\tcretention: 0.908 +- 0.030\trretention: 0.856 +- 0.030\n",
-      "ivar: 61.3889\tcloading: 0.260\trloading: 0.089\t\tcretention: 0.838 +- 0.031\trretention: 0.832 +- 0.031\n",
-      "ivar: 62.7778\tcloading: 0.279\trloading: 0.152\t\tcretention: 0.879 +- 0.027\trretention: 0.889 +- 0.027\n",
-      "ivar: 64.1667\tcloading: 0.251\trloading: 0.174\t\tcretention: 0.769 +- 0.035\trretention: 0.788 +- 0.035\n",
-      "ivar: 65.5556\tcloading: 0.232\trloading: 0.205\t\tcretention: 0.885 +- 0.035\trretention: 0.780 +- 0.035\n",
-      "ivar: 66.9444\tcloading: 0.262\trloading: 0.163\t\tcretention: 0.843 +- 0.038\trretention: 0.727 +- 0.038\n",
-      "ivar: 68.3333\tcloading: 0.183\trloading: 0.183\t\tcretention: 0.808 +- 0.042\trretention: 0.566 +- 0.042\n",
-      "ivar: 69.7222\tcloading: 0.185\trloading: 0.126\t\tcretention: 0.745 +- 0.043\trretention: 0.458 +- 0.043\n",
-      "ivar: 71.1111\tcloading: 0.208\trloading: 0.174\t\tcretention: 0.690 +- 0.042\trretention: 0.412 +- 0.042\n",
-      "ivar: 72.5000\tcloading: 0.148\trloading: 0.148\t\tcretention: 0.722 +- 0.043\trretention: 0.505 +- 0.043\n",
-      "ivar: 73.8889\tcloading: 0.127\trloading: 0.117\t\tcretention: 0.598 +- 0.043\trretention: 0.553 +- 0.043\n",
-      "ivar: 75.2778\tcloading: 0.091\trloading: 0.167\t\tcretention: 0.547 +- 0.037\trretention: 0.753 +- 0.037\n",
-      "ivar: 76.6667\tcloading: 0.119\trloading: 0.207\t\tcretention: 0.603 +- 0.036\trretention: 0.762 +- 0.036\n",
-      "ivar: 78.0556\tcloading: 0.085\trloading: 0.207\t\tcretention: 0.725 +- 0.029\trretention: 0.866 +- 0.029\n",
-      "ivar: 79.4444\tcloading: 0.119\trloading: 0.177\t\tcretention: 0.864 +- 0.025\trretention: 0.908 +- 0.025\n",
-      "ivar: 80.8333\tcloading: 0.203\trloading: 0.142\t\tcretention: 0.867 +- 0.020\trretention: 0.940 +- 0.020\n",
-      "ivar: 82.2222\tcloading: 0.250\trloading: 0.194\t\tcretention: 0.906 +- 0.024\trretention: 0.909 +- 0.024\n",
-      "ivar: 83.6111\tcloading: 0.270\trloading: 0.152\t\tcretention: 0.903 +- 0.022\trretention: 0.929 +- 0.022\n",
-      "ivar: 85.0000\tcloading: 0.240\trloading: 0.158\t\tcretention: 0.926 +- 0.023\trretention: 0.918 +- 0.023\n"
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "ivar: 0.0000\tcloading: 0.099\trloading: 0.600\t\tcretention: 0.848 +- 0.017\trretention: 0.905 +- 0.017\n",
+      "ivar: 2.8571\tcloading: 0.292\trloading: 0.461\t\tcretention: 0.960 +- 0.020\trretention: 0.874 +- 0.020\n",
+      "ivar: 5.7143\tcloading: 0.056\trloading: 0.593\t\tcretention: 0.895 +- 0.018\trretention: 0.895 +- 0.018\n",
+      "ivar: 8.5714\tcloading: 0.100\trloading: 0.570\t\tcretention: 0.800 +- 0.020\trretention: 0.865 +- 0.020\n",
+      "ivar: 11.4286\tcloading: 0.198\trloading: 0.482\t\tcretention: 0.878 +- 0.023\trretention: 0.810 +- 0.023\n",
+      "ivar: 14.2857\tcloading: 0.182\trloading: 0.522\t\tcretention: 0.871 +- 0.022\trretention: 0.836 +- 0.022\n",
+      "ivar: 17.1429\tcloading: 0.234\trloading: 0.470\t\tcretention: 0.860 +- 0.025\trretention: 0.761 +- 0.025\n",
+      "ivar: 20.0000\tcloading: 0.089\trloading: 0.406\t\tcretention: 0.814 +- 0.028\trretention: 0.695 +- 0.028\n",
+      "ivar: 22.8571\tcloading: 0.092\trloading: 0.353\t\tcretention: 0.846 +- 0.028\trretention: 0.645 +- 0.028\n",
+      "ivar: 25.7143\tcloading: 0.161\trloading: 0.320\t\tcretention: 0.810 +- 0.030\trretention: 0.553 +- 0.030\n",
+      "ivar: 28.5714\tcloading: 0.112\trloading: 0.356\t\tcretention: 0.742 +- 0.030\trretention: 0.462 +- 0.030\n",
+      "ivar: 31.4286\tcloading: 0.025\trloading: 0.308\t\tcretention: 0.625 +- 0.029\trretention: 0.388 +- 0.029\n",
+      "ivar: 34.2857\tcloading: 0.067\trloading: 0.344\t\tcretention: 0.744 +- 0.030\trretention: 0.450 +- 0.030\n",
+      "ivar: 37.1429\tcloading: 0.068\trloading: 0.266\t\tcretention: 0.686 +- 0.028\trretention: 0.335 +- 0.028\n",
+      "ivar: 40.0000\tcloading: 0.068\trloading: 0.227\t\tcretention: 0.661 +- 0.029\trretention: 0.359 +- 0.029\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a37878ecc55f40bfacef92f7af3e047f",
+       "model_id": "914947cad5334b94ac7fbbe10c039247",
        "version_major": 2,
        "version_minor": 0
       },
@@ -99,13 +125,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ -0.32582662  74.43407415   2.84930846   0.88724338]\n",
-      "[ -0.4748903   70.91853927   3.35641371   0.91164276]\n"
+      "[-9.17562577e+01 -8.57548589e+08  2.00000000e-01  8.25591489e-01]\n",
+      "[8.12288863e+01 1.78014524e+09 2.00000000e-01 7.24534130e-01]\n"
      ]
     }
    ],
    "source": [
-    "exp_name = '2018_07_07_19_58_34_p-heating-radial-freq-scan'\n",
+    "exp_name = ''\n",
     "if exp_name:\n",
     "    exp_date = '_'.join(exp_name.split('_')[:3])\n",
     "    experiment_file = os.path.join(exp_date, exp_name, 'results.hdf5')\n",
@@ -114,8 +140,8 @@
     "q = qdp.QDP(base_data_path=dp)\n",
     "q.load_data_file(experiment_file)\n",
     "print \"ivars: {}\".format(q.experiments[0]['variable_list'])\n",
-    "cs_cuts = [[23],[3]]\n",
-    "rb_cuts = [[23],[3]]\n",
+    "cs_cuts = [[30],[30]]\n",
+    "rb_cuts = [[30],[30]]\n",
     "q.set_thresholds(cs_cuts, roi=0)\n",
     "q.set_thresholds(rb_cuts, roi=1)\n",
     "q.generate_thresholds(loss=False)\n",
@@ -158,7 +184,7 @@
     "                    ax[i].plot(retention['ivar'][e, :, 0], retention[yvals][e, :, r], **marker_styles[r])\n",
     "                # fitting\n",
     "                xs = np.linspace(min(retention['ivar'][e, :, 0]), max(retention['ivar'][e, :, 0]),100)\n",
-    "                guess = [-0.4, retention['ivar'][e, np.argmin(retention[yvals][e, :, r]), 0], 5, 0.8]\n",
+    "                guess = [0.2, retention['ivar'][e, np.argmax(retention[yvals][e, :, r]), 0], 0.2, 0.4]\n",
     "                try:\n",
     "                    popt, pcov = optimize.curve_fit(\n",
     "                        gaussian,\n",
@@ -195,15 +221,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cs: 74.434 (0.368)\n",
-      "rb: 70.919 (0.222)\n"
+      "cs: -0.300 (inf)\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-14-04177d6e6500>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mr\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'{}: {:.3f} ({:.3f})'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'cs'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'rb'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpopts\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqrt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdiagonal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpcovs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
      ]
     }
    ],
@@ -214,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {
     "scrolled": false
    },
@@ -222,7 +258,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "006ecd9782604da4bcae6081e9ac696f",
+       "model_id": "1d008d5825f240429e6160ca35930dc7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -252,8 +288,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ -2.29179996e+02  -9.79000579e+07   1.00000000e-01   4.28045862e-01]\n",
-      "[ -1.91646224e+02  -9.55487464e+07   1.00000000e-01   3.84601785e-01]\n"
+      "[ 1.03529112e-58 -3.00000023e-01  1.00000017e-01 -1.41373686e-59]\n",
+      "[0.44068486 0.04063953 0.15024421 0.00550193]\n"
      ]
     }
    ],
