--- a/bin/fnode_retention_analysis.ipynb
+++ b/bin/fnode_retention_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
@@ -27,19 +27,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "data at: 2018_07_10/2018_07_10_15_27_56_rbcs-collisions-32-t1-test/results.hdf5\n",
+      "data at: 2018_10_20/2018_10_20_08_56_28_ix-scan/results.hdf5\n",
       "name 'fort_exp' is not defined\n",
       "name 'rb_uwave_freq' is not defined\n",
-      "ivars: [u'iterator']\n",
-      "ivar:\t0.0\tretention:[ 0.70103093  0.                 nan] +- [ 0.02032855  0.02032855  0.02032855]\n",
-      "ivar:\t1.0\tretention:[ 0.68918919  0.                 nan] +- [ 0.01965668  0.01965668  0.01965668]\n",
-      "ivar:\t2.0\tretention:[ 0.63736264  0.                 nan] +- [ 0.02032855  0.02032855  0.02032855]\n"
+      "ivars: [u'Iy']\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "ivar:\t-0.55\tretention:[1. 0. 0.] +- [nan nan nan]\n",
+      "ivar:\t-0.5\tretention:[0.99601594 0.         0.        ] +- [nan nan nan]\n",
+      "ivar:\t-0.45\tretention:[0.98969072 0.         0.        ] +- [nan nan nan]\n",
+      "ivar:\t-0.4\tretention:[0.97945205 0.         0.        ] +- [nan nan nan]\n",
+      "ivar:\t-0.35\tretention:[0.99390244 0.         0.        ] +- [nan nan nan]\n",
+      "ivar:\t-0.3\tretention:[0.97402597 0.         0.        ] +- [nan nan nan]\n",
+      "ivar:\t-0.25\tretention:[0.97852761 0.         0.        ] +- [nan nan nan]\n",
+      "ivar:\t-0.2\tretention:[0.97938144 0.         0.        ] +- [nan nan nan]\n",
+      "ivar:\t-0.15\tretention:[0.94964029 0.         0.        ] +- [nan nan nan]\n",
+      "ivar:\t-0.1\tretention:[0.95547945 0.         0.        ] +- [nan nan nan]\n",
+      "ivar:\t-0.05\tretention:[0.93703704 0.         0.        ] +- [nan nan nan]\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a2d3555d78654c24b75cf09a34fc9fa6",
+       "model_id": "ff1e7e1b810e43f397972363e0b5065f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -67,7 +86,7 @@
     }
    ],
    "source": [
-    "exp_name = '2018_07_10_15_27_56_rbcs-collisions-32-t1-test'\n",
+    "exp_name = ''\n",
     "if exp_name:\n",
     "    exp_date = '_'.join(exp_name.split('_')[:3])\n",
     "    experiment_file = os.path.join(exp_date, exp_name, 'results.hdf5')\n",
@@ -77,10 +96,11 @@
     "q.load_data_file(experiment_file)\n",
     "print \"ivars: {}\".format(q.experiments[0]['variable_list'])\n",
     "roi_map = ['cs', 'rb']\n",
-    "cs_cuts = [[30],[3]]\n",
-    "rb_cuts = [[30],[3]]\n",
+    "cs_cuts = [[170],[170]]\n",
+    "rb_cuts = [[170],[170]]\n",
     "q.set_thresholds(cs_cuts, roi=0)\n",
     "q.set_thresholds(rb_cuts, roi=1)\n",
+    "# results = q.generate_thresholds(loss=False)\n",
     "retention = q.apply_thresholds(exclude_rois=exclude)\n",
     "tbl_str = \"ivar:\\t{0}\\tretention:{1} +- {2}\"\n",
     "entries = np.product(retention['retention'].shape[:-1])\n",
