--- a/bin/fnode_cond-ret_analysis.ipynb
+++ b/bin/fnode_cond-ret_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 741,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,14 +11,14 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import os.path\n",
+    "from scipy.stats import skew, skewtest\n",
     "dp = '/home/ebert/jupyter-notebooks/FNode-data'\n",
-    "exclude = [2]\n",
-    "drop_itr = [0,1,2,3,4,5]"
+    "exclude = [2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 705,
+   "execution_count": 64,
    "metadata": {
     "scrolled": false
    },
@@ -27,23 +27,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "data at: 2018_07_19/2018_07_19_20_35_41_csrb-collisions-31-hd/results.hdf5\n",
-      "name 'fort_exp' is not defined\n",
-      "name 'rb_uwave_freq' is not defined\n",
-      "ivars: [u'gap_time']\n",
-      "ivar:\t8.5\tretention:[ 0.73639456  0.84636872         nan] +- [ 0.01133337  0.01133337  0.01133337]\n",
-      "ivar:\t30.0\tretention:[ 0.65366615  0.78350515         nan] +- [ 0.01329247  0.01329247  0.01329247]\n",
-      "ivar:\t60.0\tretention:[ 0.62919897  0.79112754         nan] +- [ 0.0146981  0.0146981  0.0146981]\n",
-      "ivar:\t120.0\tretention:[ 0.65696784  0.85215054         nan] +- [ 0.01547721  0.01547721  0.01547721]\n",
-      "ivar:\t300.0\tretention:[ 0.53989362  0.84730539         nan] +- [ 0.01170414  0.01170414  0.01170414]\n",
-      "ivar:\t600.0\tretention:[ 0.64516129  0.80763583        -inf] +- [ 0.01270259  0.01270259  0.01270259]\n",
-      "ivar:\t1200.0\tretention:[ 0.66430595  0.75              -inf] +- [ 0.01396504  0.01396504  0.01396504]\n"
+      "data at: 2018_07_19/2018_07_19_14_25_41_csrb-collisions-42-high-density-pt4/results.hdf5\n",
+      "ivars: []\n",
+      "Could not find conditional retention\n",
+      "ivar:\t0.0\tretention:[0.76031746 0.79554937 2.5       ] +- [0.01264909 0.01264909 0.01264909]\n",
+      "Only one iteration\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
+       "model_id": "a651536610e24d5a973b9ac5df95ac96",
        "version_major": 2,
        "version_minor": 0
       },
@@ -71,7 +65,7 @@
     }
    ],
    "source": [
-    "exp_name = '2018_07_19_20_35_41_csrb-collisions-31-hd'\n",
+    "exp_name = '2018_07_19_14_25_41_csrb-collisions-42-high-density-pt4'\n",
     "if exp_name:\n",
     "    exp_date = '_'.join(exp_name.split('_')[:3])\n",
     "    experiment_file = os.path.join(exp_date, exp_name, 'results.hdf5')\n",
@@ -81,8 +75,8 @@
     "q.load_data_file(experiment_file)\n",
     "print \"ivars: {}\".format(q.experiments[0]['variable_list'])\n",
     "roi_map = ['cs', 'rb']\n",
-    "cs_cuts = [[23],[3]]\n",
-    "rb_cuts = [[23],[3]]\n",
+    "cs_cuts = [[35],[3]]\n",
+    "rb_cuts = [[32],[3]]\n",
     "q.set_thresholds(cs_cuts, roi=0)\n",
     "q.set_thresholds(rb_cuts, roi=1)\n",
     "retention = q.apply_thresholds(exclude_rois=exclude)\n",
@@ -122,43 +116,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 742,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Skipping iteration: 0\n",
-      "Skipping iteration: 1\n",
-      "Skipping iteration: 2\n",
-      "Skipping iteration: 3\n",
-      "Skipping iteration: 4\n",
-      "Skipping iteration: 5\n",
       "--------------------\n",
       "--------------------\n",
       "--------------------\n",
       "--------------------\n",
-      "On entry to DGESDD parameter number 5 had an illegal value\n",
-      "There may be some issue with your guess: `[  3.70485993e-18   0.00000000e+00   0.00000000e+00]`\n",
+      "Internal work array size computation failed: -5\n",
+      "There may be some issue with your guess: `[3.01145486e-18 0.00000000e+00 0.00000000e+00]`\n",
       "--------------------\n",
-      "On entry to DGESDD parameter number 5 had an illegal value\n",
-      "There may be some issue with your guess: `[  3.70485993e-18   0.00000000e+00   0.00000000e+00]`\n",
+      "Internal work array size computation failed: -5\n",
+      "There may be some issue with your guess: `[3.01145486e-18 0.00000000e+00 0.00000000e+00]`\n",
       "--------------------\n",
-      "{0: [[33], [2]], 1: [[32], [4]]}\n",
-      "147\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python2.7/dist-packages/ipykernel_launcher.py:40: RuntimeWarning: overflow encountered in multiply\n",
-      "/usr/local/lib/python2.7/dist-packages/ipykernel_launcher.py:40: RuntimeWarning: invalid value encountered in sqrt\n"
+      "{0: [[31], [2]], 1: [[31], [4]]}\n",
+      "Could not find conditional retention\n",
+      "151\n"
      ]
     }
    ],
    "source": [
+    "drop_itr = []\n",
+    "\n",
     "dual_data = np.zeros((2, len(q.experiments[0]['iterations'].keys()) - len(drop_itr)))\n",
     "indv_data = np.zeros((2, len(q.experiments[0]['iterations'].keys()) - len(drop_itr)))\n",
     "dual_err = np.zeros((2, len(q.experiments[0]['iterations'].keys()) - len(drop_itr)))\n",
@@ -171,7 +154,13 @@
     "        print('Skipping iteration: {}'.format(i))\n",
     "        j += 1\n",
     "        continue\n",
+    "\n",
+    "    cs_cuts = [[35],[3]]\n",
+    "    rb_cuts = [[32],[3]]\n",
+    "    q.set_thresholds(cs_cuts, roi=0)\n",
+    "    q.set_thresholds(rb_cuts, roi=1)\n",
     "    results = q.generate_thresholds(itr=i, loss=False)\n",
+    "    \n",
     "    itr_cuts = {\n",
     "        0: q.get_thresholds()[0],\n",
     "        1: q.get_thresholds()[1]\n",
@@ -209,17 +198,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 743,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0.74829932],\n",
-       "       [ 0.84353741]])"
+       "array([[0.54304636],\n",
+       "       [0.54304636]])"
       ]
      },
-     "execution_count": 743,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,17 +219,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 744,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0.86078886],\n",
-       "       [ 0.84529148]])"
+       "array([[0.8562753 ],\n",
+       "       [0.84938704]])"
       ]
      },
-     "execution_count": 744,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,13 +240,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 745,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4750ac78d76b4efa818af3580c7709d3",
+       "model_id": "0af19948f9f246ecb44ae37a61f94608",
        "version_major": 2,
        "version_minor": 0
       },
@@ -287,8 +276,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.860788863109,0.0166742640558,0.748299319728,0.0357949040403]\n",
-      "[0.845291479821,0.0171235155465,0.843537414966,0.0299639289403]\n"
+      "cs_data.append([0.856275303644,0.0157837042504,0.543046357616,0.04053834838])\n",
+      "rb_data.append([0.84938704028,0.014968074378,0.543046357616,0.04053834838])\n"
      ]
     }
    ],
@@ -312,7 +301,7 @@
     "    indv_stderr = np.sqrt(np.sum(np.power(indv_err[r], 2)))/dual_data.shape[1]\n",
     "    dual_wmean = np.dot(dual_data[r], np.power(dual_err[r], -2))/np.sum(np.power(dual_err[r], -2))\n",
     "    dual_stderr = np.sqrt(np.sum(np.power(dual_err[r], 2)))/dual_data.shape[1]\n",
-    "    print (\"[{},{},{},{}]\".format(indv_wmean, indv_stderr, dual_wmean, dual_stderr))\n",
+    "    print (\"{}_data.append([{},{},{},{}])\".format(['cs','rb'][r],indv_wmean, indv_stderr, dual_wmean, dual_stderr))\n",
     "    ax[r].axhline(indv_wmean, color='cy'[r], alpha=0.5, lw=3)\n",
     "    ax[r].axhline(dual_wmean, color='br'[r], alpha=0.5, lw=3)\n",
     "    # plot uncertainty of the mean\n",
@@ -332,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 746,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,56 +338,294 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 747,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.102040816327,0.149659863946],[0.0544217687075,0.69387755102]]\n"
+      "corr_ret_data.append([[0.35761589404,0.0993377483444],[0.0993377483444,0.443708609272]])\n",
+      "corr_ret_err.append([[0.0390047345037,0.0243416303385],[0.0243416303385,0.0404307337798]])\n"
      ]
     }
    ],
    "source": [
-    "print('['+','.join(['[{},{}]'.format(ps[i][0],ps[i][1]) for i in range(2)])+']')"
+    "print('corr_ret_data.append(['+','.join(['[{},{}]'.format(ps[i][0],ps[i][1]) for i in range(2)])+'])')\n",
+    "print('corr_ret_err.append(['+','.join(['[{},{}]'.format(binomial_err(n, ps)[i][0],binomial_err(n, ps)[i][1]) for i in range(2)])+'])')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 748,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0.0249664384425,0.0294232298746],[0.0187101121842,0.0380128420128]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('['+','.join(['[{},{}]'.format(binomial_err(n, ps)[i][0],binomial_err(n, ps)[i][1]) for i in range(2)])+']')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 749,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0048020625462823433"
+       "0.004675066912975902"
       ]
      },
-     "execution_count": 749,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "binomial_err(n,1./(2*n))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#ps11 = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "826cf87ad56d4adb88a9a939a9e59078",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/html": [
+       "<p>Failed to display Jupyter Widget of type <code>FigureCanvasNbAgg</code>.</p>\n",
+       "<p>\n",
+       "  If you're reading this message in Jupyter Notebook or JupyterLab, it may mean\n",
+       "  that the widgets JavaScript is still loading. If this message persists, it\n",
+       "  likely means that the widgets JavaScript library is either not installed or\n",
+       "  not enabled. See the <a href=\"https://ipywidgets.readthedocs.io/en/stable/user_install.html\">Jupyter\n",
+       "  Widgets Documentation</a> for setup instructions.\n",
+       "</p>\n",
+       "<p>\n",
+       "  If you're reading this message in another notebook frontend (for example, a static\n",
+       "  rendering on GitHub or <a href=\"https://nbviewer.jupyter.org/\">NBViewer</a>),\n",
+       "  it may mean that your frontend doesn't currently support widgets.\n",
+       "</p>\n"
+      ],
+      "text/plain": [
+       "FigureCanvasNbAgg()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--------------------\n",
+      "--------------------\n",
+      "--------------------\n",
+      "--------------------\n",
+      "Internal work array size computation failed: -5\n",
+      "There may be some issue with your guess: `[3.01145486e-18 0.00000000e+00 0.00000000e+00]`\n",
+      "--------------------\n",
+      "Internal work array size computation failed: -5\n",
+      "There may be some issue with your guess: `[3.01145486e-18 0.00000000e+00 0.00000000e+00]`\n",
+      "--------------------\n",
+      "{0: [[31], [2]], 1: [[31], [4]]}\n",
+      "Could not find conditional retention\n"
+     ]
+    }
+   ],
+   "source": [
+    "bins = 40\n",
+    "trials = 25\n",
+    "fig, ax = plt.subplots()\n",
+    "\n",
+    "\n",
+    "for i in q.experiments[0]['iterations'].keys():\n",
+    "    dual_data = np.zeros((2, 1))\n",
+    "    indv_data = np.zeros((2, 1))\n",
+    "    dual_err = np.zeros((2, 1))\n",
+    "    indv_err = np.zeros((2, 1))\n",
+    "    dual_ret_data = []\n",
+    "\n",
+    "    cs_cuts = [[35],[3]]\n",
+    "    rb_cuts = [[32],[3]]\n",
+    "    q.set_thresholds(cs_cuts, roi=0)\n",
+    "    q.set_thresholds(rb_cuts, roi=1)\n",
+    "    results = q.generate_thresholds(itr=i, loss=False)\n",
+    "\n",
+    "    itr_cuts = {\n",
+    "        0: q.get_thresholds()[0],\n",
+    "        1: q.get_thresholds()[1]\n",
+    "    }\n",
+    "    print(itr_cuts)\n",
+    "    q.apply_thresholds(exclude_rois=exclude)\n",
+    "    qd = q.experiments[0]['iterations'][i]['quantized_data']\n",
+    "    dual_load = np.logical_and(qd[:,0,0], qd[:,0,1])\n",
+    "    dual_data =  qd[dual_load,1,:2]\n",
+    "\n",
+    "    for k in range(1):\n",
+    "        ps = np.zeros((2,2,bins))\n",
+    "\n",
+    "        for nn in xrange(bins):\n",
+    "            itr = dual_data[np.random.randint(len(dual_data), size=trials)]\n",
+    "            ps[1,1,nn] += np.log(np.sum(np.logical_and(itr[:,0], itr[:,1])).astype('float')/trials)  # both atoms retained\n",
+    "            ps[0,0,nn] += np.sum(np.logical_and(np.logical_not(itr[:,0]), np.logical_not(itr[:,1]))).astype('float')/trials  # both atoms lost\n",
+    "            ps[0,1,nn] += np.sum(np.logical_and(np.logical_not(itr[:,0]), itr[:,1])).astype('float')/trials  # cs only lost\n",
+    "            ps[1,0,nn] += np.sum(np.logical_and(itr[:,0], np.logical_not(itr[:,1]))).astype('float')/trials  # cs only lost\n",
+    "\n",
+    "        ax.hist(ps[1,1], alpha=0.3)\n",
+    "        ps11.append(ps[1,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "515fe7f1d84d4d85b097775a278eebd8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/html": [
+       "<p>Failed to display Jupyter Widget of type <code>FigureCanvasNbAgg</code>.</p>\n",
+       "<p>\n",
+       "  If you're reading this message in Jupyter Notebook or JupyterLab, it may mean\n",
+       "  that the widgets JavaScript is still loading. If this message persists, it\n",
+       "  likely means that the widgets JavaScript library is either not installed or\n",
+       "  not enabled. See the <a href=\"https://ipywidgets.readthedocs.io/en/stable/user_install.html\">Jupyter\n",
+       "  Widgets Documentation</a> for setup instructions.\n",
+       "</p>\n",
+       "<p>\n",
+       "  If you're reading this message in another notebook frontend (for example, a static\n",
+       "  rendering on GitHub or <a href=\"https://nbviewer.jupyter.org/\">NBViewer</a>),\n",
+       "  it may mean that your frontend doesn't currently support widgets.\n",
+       "</p>\n"
+      ],
+      "text/plain": [
+       "FigureCanvasNbAgg()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.2197461351814725\n",
+      "1.4137923203638503\n",
+      "0.9446377232673526\n",
+      "0.9730423630078635\n",
+      "0.7112670008967481\n",
+      "1.0037196304474003\n",
+      "0.7353642566809804\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e73f94f8cb8c4116959f9aeddb97cb6a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/html": [
+       "<p>Failed to display Jupyter Widget of type <code>FigureCanvasNbAgg</code>.</p>\n",
+       "<p>\n",
+       "  If you're reading this message in Jupyter Notebook or JupyterLab, it may mean\n",
+       "  that the widgets JavaScript is still loading. If this message persists, it\n",
+       "  likely means that the widgets JavaScript library is either not installed or\n",
+       "  not enabled. See the <a href=\"https://ipywidgets.readthedocs.io/en/stable/user_install.html\">Jupyter\n",
+       "  Widgets Documentation</a> for setup instructions.\n",
+       "</p>\n",
+       "<p>\n",
+       "  If you're reading this message in another notebook frontend (for example, a static\n",
+       "  rendering on GitHub or <a href=\"https://nbviewer.jupyter.org/\">NBViewer</a>),\n",
+       "  it may mean that your frontend doesn't currently support widgets.\n",
+       "</p>\n"
+      ],
+      "text/plain": [
+       "FigureCanvasNbAgg()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[<matplotlib.lines.Line2D at 0x85c730cc>]"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ts = np.array([8.5,30,60,100,300,600,1200])/1000.\n",
+    "fig, ax = plt.subplots(nrows=len(ps11), figsize=(3,8), sharex=True)\n",
+    "ks = []\n",
+    "for n, d in enumerate(ps11):\n",
+    "    k = -np.array(d)/np.sqrt(ts[n])\n",
+    "    ax[n].hist(k, alpha=0.8, normed=True)\n",
+    "#     ax[n].set_xlim(-1.5,0.1)\n",
+    "    print(np.mean(k))\n",
+    "    ks.append(np.mean(k))\n",
+    "    ax[n].text(20, 0.05, r\"$t={}$ s\".format(ts[n]))\n",
+    "ax[-1].set_xlabel(r\"$-ln(p(t))/\\sqrt{t}$\")\n",
+    "ax[3].set_ylabel(r\"PDF\")\n",
+    "plt.tight_layout()\n",
+    "\n",
+    "fig2, ax2 = plt.subplots()\n",
+    "ax2.plot(ts, ks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "825a7e39d6af49a981e6b020f579dbe1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/html": [
+       "<p>Failed to display Jupyter Widget of type <code>FigureCanvasNbAgg</code>.</p>\n",
+       "<p>\n",
+       "  If you're reading this message in Jupyter Notebook or JupyterLab, it may mean\n",
+       "  that the widgets JavaScript is still loading. If this message persists, it\n",
+       "  likely means that the widgets JavaScript library is either not installed or\n",
+       "  not enabled. See the <a href=\"https://ipywidgets.readthedocs.io/en/stable/user_install.html\">Jupyter\n",
+       "  Widgets Documentation</a> for setup instructions.\n",
+       "</p>\n",
+       "<p>\n",
+       "  If you're reading this message in another notebook frontend (for example, a static\n",
+       "  rendering on GitHub or <a href=\"https://nbviewer.jupyter.org/\">NBViewer</a>),\n",
+       "  it may mean that your frontend doesn't currently support widgets.\n",
+       "</p>\n"
+      ],
+      "text/plain": [
+       "FigureCanvasNbAgg()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "fig, ax = plt.subplots(nrows=len(ps11), figsize=(3,8), sharex=True)\n",
+    "for n, d in enumerate(ps11):\n",
+    "    ax[n].hist(d, alpha=0.8)\n",
+    "    ax[n].set_xlim(0,1)"
    ]
   },
   {
