--- a/bin/fnode_retention_analysis-exp.ipynb
+++ b/bin/fnode_retention_analysis-exp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "metadata": {
     "scrolled": false
    },
@@ -32,33 +32,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "data at: 2018_07_20/2018_07_20_10_37_28_csrb-hd-42-t1/results.hdf5\n",
+      "data at: 2018_07_20/2018_07_20_19_09_16_csrb-31-t1/results.hdf5\n",
       "name 'fort_exp' is not defined\n",
       "name 'rb_uwave_freq' is not defined\n",
       "ivars: [u'gap_time']\n",
-      "--------------------\n",
-      "--------------------\n",
-      "--------------------\n",
-      "--------------------\n",
-      "On entry to DGESDD parameter number 5 had an illegal value\n",
-      "There may be some issue with your guess: `[  1.26882631e-17   0.00000000e+00   0.00000000e+00]`\n",
-      "--------------------\n",
-      "On entry to DGESDD parameter number 5 had an illegal value\n",
-      "There may be some issue with your guess: `[  1.26882631e-17   0.00000000e+00   0.00000000e+00]`\n",
-      "--------------------\n",
-      "{0: [[35], [2]], 1: [[31], [4]], 2: [[nan], [nan]]}\n",
-      "ivar:\t8.5\tretention:[ 0.95967742  0.89261745  1.        ] +- [ 0.02133057  0.02133057  0.02133057]\n",
-      "ivar:\t246.8\tretention:[ 0.7704918  0.86             inf] +- [ 0.02382668  0.02382668  0.02382668]\n",
-      "ivar:\t485.1\tretention:[ 0.78169014  0.79194631         inf] +- [ 0.02796652  0.02796652  0.02796652]\n",
-      "ivar:\t723.4\tretention:[ 0.71165644  0.82666667         nan] +- [ 0.02599301  0.02599301  0.02599301]\n",
-      "ivar:\t961.7\tretention:[ 0.68926554  0.77333333         inf] +- [ 0.02874932  0.02874932  0.02874932]\n",
-      "ivar:\t1200.0\tretention:[ 0.66463415  0.76821192         nan] +- [ 0.02887976  0.02887976  0.02887976]\n"
+      "{0: [[36], [3]], 1: [[32], [3]]}\n",
+      "ivar:\t8.5\tretention:[ 0.          0.          2.49364121] +- [ 0.00759959  0.00759959  0.00759959]\n",
+      "ivar:\t1006.8\tretention:[ 0.12598425  0.025       5.        ] +- [ 0.01467991  0.01467991  0.01467991]\n",
+      "ivar:\t2005.1\tretention:[  1.34146341e-01   0.00000000e+00   5.00000000e+03] +- [ 0.00741019  0.00741019  0.00741019]\n",
+      "ivar:\t3003.4\tretention:[ 0.23333333  0.          5.        ] +- [ 0.00779891  0.00779891  0.00779891]\n",
+      "ivar:\t4001.7\tretention:[  2.23880597e-01   1.35135135e-02   5.00000000e+03] +- [ 0.01128781  0.01128781  0.01128781]\n",
+      "ivar:\t5000.0\tretention:[ 0.28688525  0.01298701  5.        ] +- [ 0.01085092  0.01085092  0.01085092]\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0619be147f68439ea744516d668eb225",
+       "model_id": "a80cd5e0a8dd41f294c1295335925e01",
        "version_major": 2,
        "version_minor": 0
       },
@@ -85,19 +75,19 @@
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[  0.50990395  10.80493506   0.72748986]\n",
-      "[  0.15953814  13.08261758   0.80930618]\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "/usr/local/lib/python2.7/dist-packages/ipykernel_launcher.py:11: RuntimeWarning: overflow encountered in exp\n",
       "  # This is added back by InteractiveShellApp.init_path()\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ -0.39189966  12.51946449   0.1987534 ]\n",
+      "[ 0.22209468  0.23466575  0.00455617]\n"
      ]
     }
    ],
@@ -108,29 +98,39 @@
     "    experiment_file = os.path.join(exp_date, exp_name, 'results.hdf5')\n",
     "else:\n",
     "    experiment_file = ''\n",
+    "    \n",
+    "single_only = False    \n",
+    "\n",
     "q = qdp.QDP(base_data_path=dp)\n",
     "q.load_data_file(experiment_file)\n",
     "print \"ivars: {}\".format(q.experiments[0]['variable_list'])\n",
     "roi_map = ['cs', 'rb']\n",
     "fmt_map = ['bo', 'rd']\n",
-    "cs_cuts = [[28],[3]]\n",
-    "rb_cuts = [[20],[3]]\n",
+    "cs_cuts = [[36],[3]]\n",
+    "rb_cuts = [[32],[3]]\n",
     "marker_styles = [\n",
     "    dict(color='cornflowerblue', marker='o', markeredgecolor='b', linestyle='None'),\n",
     "    dict(color='indianred', marker='d', markeredgecolor='r', linestyle='None')\n",
     "]\n",
     "q.set_thresholds(cs_cuts, roi=0)\n",
     "q.set_thresholds(rb_cuts, roi=1)\n",
-    "q.generate_thresholds(loss=False)\n",
+    "# q.generate_thresholds(loss=False)\n",
     "print(q.get_thresholds())\n",
-    "retention = q.apply_thresholds(exclude_rois=exclude)\n",
+    "retention = q.apply_thresholds(exclude_rois=exclude, ncondition=1)\n",
+    "\n",
+    "ret = 'retention'\n",
+    "err = 'error'\n",
+    "if single_only:\n",
+    "    ret = 'conditional_retention'\n",
+    "    err = 'conditional_retention_err'\n",
+    "\n",
     "tbl_str = \"ivar:\\t{0}\\tretention:{1} +- {2}\"\n",
     "entries = np.product(retention['retention'].shape[:-1])\n",
     "for i in range(entries):\n",
     "    print(tbl_str.format(\n",
     "        retention['ivar'].reshape((entries,-1))[i][0],\n",
-    "        retention['retention'].reshape((entries,-1))[i],\n",
-    "        retention['error'].reshape((entries,-1))[i]\n",
+    "        retention[ret].reshape((entries,-1))[i],\n",
+    "        retention[err].reshape((entries,-1))[i]\n",
     "    ))\n",
     "q.save_experiment_data()\n",
     "q.experiments[0]['variable_list']\n",
@@ -139,13 +139,13 @@
     "# plotting\n",
     "fig, ax = plt.subplots(nrows=2, figsize=(5,8))\n",
     "plt.subplots_adjust(wspace=0.3)\n",
-    "for i, yvals in enumerate(['retention', 'loading']):\n",
+    "for i, yvals in enumerate([ret, 'loading']):\n",
     "    for e in range(len(retention['ivar'])):\n",
     "        for r in range(2):            \n",
-    "            if yvals=='retention':\n",
+    "            if yvals==ret:\n",
     "                try:\n",
     "                    ax[i].errorbar(retention['ivar'][e, :, r], retention[yvals][e, :, r],\n",
-    "                        yerr=retention['error'][e,:,r],\n",
+    "                        yerr=retention[err][e,:,r],\n",
     "                        **marker_styles[r]\n",
     "                    )\n",
     "                except Exception as ee:\n",
@@ -160,7 +160,7 @@
     "                        retention['ivar'][e, :, 0],\n",
     "                        retention[yvals][e, :, r],\n",
     "                        p0=guess,\n",
-    "                        sigma=retention['error'][e, :, r]\n",
+    "                        sigma=retention[err][e, :, r]\n",
     "                    )\n",
     "                except Exception as ee:\n",
     "                    print ee\n",
@@ -168,12 +168,12 @@
     "                    ax[i].plot(xs, expon(xs, *popt), fmt_map[r][0]+'--', alpha=0.6)\n",
     "                    print(popt)\n",
     "                    fit_data = \"{}\\na: {:.3f}\\ntau: {:.3f}\\nb: {:.3f}\"\n",
-    "                    ax[i].text(0.2+r*25, 0.1, fit_data.format(roi_map[r], *popt), fontsize=12)\n",
+    "                    ax[i].text(0.2+r*max(xs)*0.7, 0.1, fit_data.format(roi_map[r], *popt), fontsize=12)\n",
     "            else:\n",
     "                ax[i].plot(retention['ivar'][e, :, 0], retention[yvals][e, :, r], **marker_styles[r])\n",
     "                \n",
     "        \n",
-    "    ax[i].set_ylim(0., 1.05*np.nanmax(retention[yvals][e,:,:2]))\n",
+    "    ax[i].set_ylim(0., 1)\n",
     "    ax[i].set_xlabel(xlab)\n",
     "    ax[i].set_ylabel(yvals)\n",
     "\n",
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "metadata": {
     "scrolled": false
    },
@@ -193,7 +193,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "68372a835ab34eed8ef0d716968c4350",
+       "model_id": "e7447a0607264747a43728554034eaa7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -223,24 +223,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[  9.13393209e-01   3.21091310e+03]\n",
-      "[  3.69744369e-02   7.27996888e+02]\n",
-      "[  8.85771924e-01   7.73627645e+03]\n",
-      "[  1.48648694e-02   1.60369106e+03]\n"
+      "[ -4.93128567e-01   5.15284255e+03]\n",
+      "[  4.44422866e-02   1.11242545e+03]\n",
+      "[ -4.99379288e-01   2.32230555e+05]\n",
+      "[  8.55663559e-03   3.17455689e+05]\n"
      ]
     }
    ],
    "source": [
     "# plotting\n",
+    "offset = 0.5\n",
+    "single_only = True\n",
+    "\n",
+    "ret = 'retention'\n",
+    "err = 'error'\n",
+    "if single_only:\n",
+    "    ret = 'conditional_retention'\n",
+    "    err = 'conditional_retention_err'\n",
+    "\n",
     "fig, ax = plt.subplots(nrows=2, figsize=(5,8))\n",
     "plt.subplots_adjust(wspace=0.3)\n",
-    "for i, yvals in enumerate(['retention', 'loading']):\n",
+    "for i, yvals in enumerate([ret, 'loading']):\n",
     "    for e in range(len(retention['ivar'])):\n",
     "        for r in range(2):            \n",
-    "            if yvals=='retention':\n",
+    "            if yvals==ret:\n",
     "                try:\n",
     "                    ax[i].errorbar(retention['ivar'][e, :, r], retention[yvals][e, :, r],\n",
-    "                        yerr=retention['error'][e,:,r],\n",
+    "                        yerr=retention[err][e,:,r],\n",
     "                        fmt=fmt_map[r]\n",
     "                    )\n",
     "                except Exception as ee:\n",
@@ -248,28 +257,28 @@
     "                    ax[i].plot(retention['ivar'][e, :, 0], retention[yvals][e, :, r], fmt_map[r])\n",
     "                # fitting\n",
     "                xs = np.linspace(min(retention['ivar'][e, :, 0]), max(retention['ivar'][e, :, 0]),100)\n",
-    "                guess = [0.9, 1e4, 0]\n",
+    "                guess = [-0.5, 1e3, 0]\n",
     "                try:\n",
     "                    popt, pcov = optimize.curve_fit(\n",
-    "                        lambda x, a, tau: expon(x, a, tau, 0.0),\n",
+    "                        lambda x, a, tau: expon(x, a, tau, offset),\n",
     "                        retention['ivar'][e, :, 0],\n",
     "                        retention[yvals][e, :, r],\n",
     "                        p0=guess[:2],\n",
-    "                        sigma=retention['error'][e, :, r]\n",
+    "                        sigma=retention[err][e, :, r]\n",
     "                    )\n",
     "                except Exception as ee:\n",
     "                    print ee\n",
     "                else:\n",
-    "                    ax[i].plot(xs, expon(xs,popt[0],popt[1],0), fmt_map[r][0]+'--', alpha=0.6)\n",
+    "                    ax[i].plot(xs, expon(xs,popt[0],popt[1],offset), fmt_map[r][0]+'--', alpha=0.6)\n",
     "                    print(popt)\n",
     "                    print(np.sqrt(np.diagonal(np.abs(pcov))))\n",
     "                    fit_data = \"{}\\na: {:.3f}\\ntau: {:.3f}\\nb: {:.3f}\"\n",
-    "                    ax[i].text(0.2+r*8e2, 0.1, fit_data.format(roi_map[r],popt[0],popt[1],0), fontsize=12)\n",
+    "                    ax[i].text(0.2+r*0.6*max(xs), 0.1, fit_data.format(roi_map[r],popt[0],popt[1],offset), fontsize=12)\n",
     "            else:\n",
     "                ax[i].plot(retention['ivar'][e, :, 0], retention[yvals][e, :, r], fmt_map[r])\n",
     "                \n",
     "        \n",
-    "    ax[i].set_ylim(0.,1)\n",
+    "    ax[i].set_ylim(0.,0.6)\n",
     "    ax[i].set_xlabel(xlab)\n",
     "    ax[i].set_ylabel(yvals)\n",
     "\n",
@@ -281,22 +290,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4.797688751926041"
+       "6.656187290969901"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "(1./3.21-1./9.7)**-1"
+    "(1./3.21-1./6.2)**-1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.00940178,  0.01283855,  0.01283855,  0.01264552,  0.01389937,\n",
+       "        0.01345468])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "retention[err][0,:,0]"
    ]
   },
   {
