--- a/bin/fnode_retention_analysis-rfe.ipynb
+++ b/bin/fnode_retention_analysis-rfe.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false
    },
@@ -43,29 +43,133 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "data at: 2018_07_05/2018_07_05_17_39_23_uwave_ramsey_longer/results.hdf5\n",
+      "data at: 2018_08_06/2018_08_06_13_36_19_uwave-freq/results.hdf5\n",
       "name 'fort_exp' is not defined\n",
       "name 'rb_uwave_freq' is not defined\n",
-      "ivars: [u'uwave_gap_time_ms']\n",
-      "ivar: 0.0000\tcloading: 0.148\trloading: 0.216\t\tcretention: 0.018 +- 0.007\trretention: 0.000 +- 0.007\n",
-      "ivar: 0.5000\tcloading: 0.203\trloading: 0.196\t\tcretention: 0.667 +- 0.036\trretention: 0.185 +- 0.036\n",
-      "ivar: 1.0000\tcloading: 0.088\trloading: 0.269\t\tcretention: 0.500 +- 0.046\trretention: 0.400 +- 0.046\n",
-      "ivar: 1.5000\tcloading: 0.238\trloading: 0.158\t\tcretention: 0.176 +- 0.040\trretention: 0.759 +- 0.040\n",
-      "ivar: 2.0000\tcloading: 0.131\trloading: 0.138\t\tcretention: 0.539 +- 0.030\trretention: 0.887 +- 0.030\n",
-      "ivar: 2.5000\tcloading: 0.231\trloading: 0.240\t\tcretention: 0.487 +- 0.044\trretention: 0.679 +- 0.044\n",
-      "ivar: 3.0000\tcloading: 0.162\trloading: 0.168\t\tcretention: 0.312 +- 0.046\trretention: 0.412 +- 0.046\n",
-      "ivar: 3.5000\tcloading: 0.325\trloading: 0.145\t\tcretention: 0.654 +- 0.031\trretention: 0.123 +- 0.031\n",
-      "ivar: 4.0000\tcloading: 0.229\trloading: 0.186\t\tcretention: 0.390 +- 0.034\trretention: 0.160 +- 0.034\n",
-      "ivar: 4.5000\tcloading: 0.289\trloading: 0.191\t\tcretention: 0.405 +- 0.043\trretention: 0.300 +- 0.043\n",
-      "ivar: 5.0000\tcloading: 0.265\trloading: 0.166\t\tcretention: 0.597 +- 0.047\trretention: 0.543 +- 0.047\n",
-      "ivar: 5.5000\tcloading: 0.352\trloading: 0.208\t\tcretention: 0.518 +- 0.045\trretention: 0.617 +- 0.045\n",
-      "ivar: 6.0000\tcloading: 0.136\trloading: 0.189\t\tcretention: 0.397 +- 0.043\trretention: 0.691 +- 0.043\n"
+      "ivars: [u'uwave_phase']\n",
+      "--------------------\n",
+      "--------------------\n",
+      "--------------------\n",
+      "--------------------\n",
+      "On entry to DGESDD parameter number 5 had an illegal value\n",
+      "There may be some issue with your guess: `[  1.19378820e-17   0.00000000e+00   0.00000000e+00]`\n",
+      "--------------------\n",
+      "On entry to DGESDD parameter number 5 had an illegal value\n",
+      "There may be some issue with your guess: `[  1.19378820e-17   0.00000000e+00   0.00000000e+00]`\n",
+      "--------------------\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "ivar: 0.0000\tcloading: 0.177\trloading: 0.188\t\tcretention: 0.919 +- 0.023\trretention: 0.914 +- 0.023\n",
+      "ivar: 0.2500\tcloading: 0.364\trloading: 0.327\t\tcretention: 0.869 +- 0.033\trretention: 0.831 +- 0.033\n",
+      "ivar: 0.5000\tcloading: 0.196\trloading: 0.259\t\tcretention: 0.505 +- 0.036\trretention: 0.541 +- 0.036\n",
+      "ivar: 0.7500\tcloading: 0.221\trloading: 0.336\t\tcretention: 0.131 +- 0.021\trretention: 0.107 +- 0.021\n",
+      "ivar: 1.0000\tcloading: 0.215\trloading: 0.226\t\tcretention: 0.020 +- 0.006\trretention: 0.000 +- 0.006\n",
+      "ivar: 1.2500\tcloading: 0.177\trloading: 0.241\t\tcretention: 0.262 +- 0.024\trretention: 0.129 +- 0.024\n",
+      "ivar: 1.5000\tcloading: 0.362\trloading: 0.241\t\tcretention: 0.539 +- 0.051\trretention: 0.471 +- 0.051\n",
+      "ivar: 1.7500\tcloading: 0.199\trloading: 0.195\t\tcretention: 0.810 +- 0.038\trretention: 0.735 +- 0.038\n",
+      "ivar: 2.0000\tcloading: 0.395\trloading: 0.098\t\tcretention: 0.950 +- 0.067\trretention: 0.800 +- 0.067\n",
+      "ivar: 2.2500\tcloading: 0.181\trloading: 0.116\t\tcretention: 0.780 +- 0.049\trretention: 0.672 +- 0.049\n",
+      "ivar: 2.5000\tcloading: 0.157\trloading: 0.206\t\tcretention: 0.370 +- 0.036\trretention: 0.420 +- 0.036\n",
+      "ivar: 2.7500\tcloading: 0.154\trloading: 0.283\t\tcretention: 0.081 +- 0.022\trretention: 0.154 +- 0.022\n",
+      "ivar: 3.0000\tcloading: 0.250\trloading: 0.295\t\tcretention: 0.040 +- 0.005\trretention: 0.000 +- 0.005\n",
+      "ivar: 3.2500\tcloading: 0.292\trloading: 0.130\t\tcretention: 0.208 +- 0.048\trretention: 0.178 +- 0.048\n",
+      "ivar: 3.5000\tcloading: 0.261\trloading: 0.279\t\tcretention: 0.584 +- 0.040\trretention: 0.481 +- 0.040\n",
+      "ivar: 3.7500\tcloading: 0.309\trloading: 0.294\t\tcretention: 0.871 +- 0.035\trretention: 0.792 +- 0.035\n",
+      "ivar: 4.0000\tcloading: 0.266\trloading: 0.186\t\tcretention: 0.820 +- 0.040\trretention: 0.800 +- 0.040\n",
+      "ivar: 4.2500\tcloading: 0.211\trloading: 0.276\t\tcretention: 0.604 +- 0.032\trretention: 0.735 +- 0.032\n",
+      "ivar: 4.5000\tcloading: 0.387\trloading: 0.295\t\tcretention: 0.277 +- 0.045\trretention: 0.338 +- 0.045\n",
+      "ivar: 4.7500\tcloading: 0.207\trloading: 0.321\t\tcretention: 0.041 +- 0.018\trretention: 0.079 +- 0.018\n",
+      "ivar: 5.0000\tcloading: 0.332\trloading: 0.262\t\tcretention: 0.100 +- 0.008\trretention: 0.000 +- 0.008\n",
+      "ivar: 5.2500\tcloading: 0.296\trloading: 0.261\t\tcretention: 0.304 +- 0.031\trretention: 0.144 +- 0.031\n",
+      "ivar: 5.5000\tcloading: 0.371\trloading: 0.265\t\tcretention: 0.633 +- 0.050\trretention: 0.543 +- 0.050\n",
+      "ivar: 5.7500\tcloading: 0.262\trloading: 0.268\t\tcretention: 0.921 +- 0.030\trretention: 0.845 +- 0.030\n",
+      "ivar: 6.0000\tcloading: 0.379\trloading: 0.284\t\tcretention: 0.810 +- 0.022\trretention: 0.947 +- 0.022\n",
+      "ivar: 6.2500\tcloading: 0.209\trloading: 0.347\t\tcretention: 0.505 +- 0.027\trretention: 0.768 +- 0.027\n",
+      "ivar: 6.5000\tcloading: 0.225\trloading: 0.449\t\tcretention: 0.216 +- 0.029\trretention: 0.387 +- 0.029\n",
+      "ivar: 6.7500\tcloading: 0.287\trloading: 0.302\t\tcretention: 0.000 +- 0.022\trretention: 0.076 +- 0.022\n",
+      "ivar: 7.0000\tcloading: 0.313\trloading: 0.405\t\tcretention: 0.118 +- 0.011\trretention: 0.023 +- 0.011\n",
+      "ivar: 7.2500\tcloading: 0.311\trloading: 0.446\t\tcretention: 0.416 +- 0.030\trretention: 0.248 +- 0.030\n",
+      "ivar: 7.5000\tcloading: 0.210\trloading: 0.459\t\tcretention: 0.733 +- 0.028\trretention: 0.489 +- 0.028\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ebert/jupyter-notebooks/FNode/analyses/qdp/QDP/qdp.py:131: RuntimeWarning: overflow encountered in double_scalars\n",
+      "  errs[r] = (z/n[r].astype('float'))*np.sqrt(ns[r].astype('float')*(1.0-ns[r].astype('float')/n[r].astype('float')))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n",
+      "Could not find conditional retention\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "889117248312432f962a921e7f349297",
+       "model_id": "8804314ece134f63ac2fff5444ef9cbb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -95,8 +199,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ -5.67937235e-01   4.54592739e-01   3.55221297e-01  -8.79747116e+07]\n",
-      "[ -0.91087118   0.25868768   0.45400805  11.512499  ]\n"
+      "[   0.90223684    0.5155581     0.46607913  144.35104482]\n",
+      "[  9.15956020e-01   5.03737361e-01   4.56153103e-01   8.22601138e+02]\n"
      ]
     }
    ],
@@ -114,6 +218,7 @@
     "rb_cuts = [[20],[3]]\n",
     "q.set_thresholds(cs_cuts, roi=0)\n",
     "q.set_thresholds(rb_cuts, roi=1)\n",
+    "q.generate_thresholds(loss=False)\n",
     "retention = q.apply_thresholds(exclude_rois=exclude)\n",
     "cuts = q.get_thresholds()\n",
     "roi_map = ['cs', 'rb']\n",
@@ -249,42 +354,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6.039850053786728"
+       "6.360851014014818"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "(0.47016199/0.5)*6.423158594537521"
+    "(0.5155581/0.5)*6.168898339503169"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4.956264639038674"
+       "5.017099491477866"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "(0.50033304/0.5)*4.952965567733319"
+    "(5.03737361e-01/0.5)*4.979876300536964"
    ]
   },
   {
